--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Leagues#index</h1>
-<p>Find me in app/views/leagues/index.html.erb</p>
+<h1>Leagues</h1>
+<ul>
+<% @leagues.each do |league| %>
+  <li><%= link_to league, league %></li>
+<% end %>
+</ul>
