--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Teams#index</h1>
-<p>Find me in app/views/teams/index.html.erb</p>
+<h1><%= @league %> teams</h1>
+<ul>
+<% @teams.each do |team| %>
+  <li><%= link_to team, team_path(team.league, team) %></li>
+<% end %>
+</ul>
